--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "svelte": "^4.2.7",
     "vite": "^5.0.3"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@fontsource-variable/rubik": "^5.0.21"
+  }
 }
