--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "type": "module",
   "dependencies": {
     "@fontsource-variable/rubik": "^5.0.21",
-    "@iconify/svelte": "^3.1.6"
+    "@iconify/svelte": "^3.1.6",
+    "@supabase/supabase-js": "^2.43.1",
+    "dotenv": "^16.4.5"
   }
 }
