--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 	"dependencies": {
 		"@fontsource-variable/rubik": "^5.0.22",
 		"@iconify/svelte": "^4.0.2",
-		"@supabase/supabase-js": "^2.43.2",
+		"@supabase/ssr": "^0.3.0",
+		"@supabase/supabase-js": "^2.43.4",
 		"dotenv": "^16.4.5"
 	}
 }
