--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@iconify/svelte": "^3.1.6",
     "appwrite": "^16.1.0",
     "dotenv": "^16.4.7",
-    "node-appwrite": "^14.1.0",
-    "uuid": "^11.0.5"
+    "node-appwrite": "^14.1.0"
   }
 }
