--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@iconify/svelte": "^3.1.6",
     "appwrite": "^16.1.0",
     "dotenv": "^16.4.7",
+    "fuse.js": "^7.1.0",
     "node-appwrite": "^14.1.0"
   }
 }
